--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="refresh" content="0; url=https://bot.makielski.net/" />
-</head>
-<body>
-</body>
+  <head>
+    <noscript>
+      <meta id="redirect" http-equiv="refresh" content="0; url="https://bot.makielski.net">
+    </noscript>
+  </head>
+
+  <body>
+  <script>
+    var destination = "https://bot.makielski.net";
+    window.location.href = destination + (window.location.search || '') + (window.location.hash || '');
+  </script>
+  </body>
 </html>
